[tool.poetry]
name = "zamp-sdk"
version = "0.0.3"
description = "Customer-facing SDK for executing actions on the Zamp platform"
authors = ["Zamp Engineering <engineering@zamp.com>"]
readme = "README.md"
packages = [{include = "zamp_sdk"}]
license = "MIT"
keywords = ["zamp", "sdk", "actions", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

[tool.poetry.urls]
Homepage = "https://github.com/Zampfi/zamp-sdk"
Documentation = "https://github.com/Zampfi/zamp-sdk#readme"
Repository = "https://github.com/Zampfi/zamp-sdk"
Issues = "https://github.com/Zampfi/zamp-sdk/issues"
Changelog = "https://github.com/Zampfi/zamp-sdk/releases"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "*"
pydantic = "*"
structlog = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"
pre-commit = "*"
diff-cover = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["zamp_sdk", "tests"]
addopts = "--cov=zamp_sdk --cov-report=xml --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
relative_files = true
source = ["zamp_sdk"]
omit = ["*/tests/*"]
